<resources>
    <string name="app_name">Fajr Caller</string>
    <string name="setAlarmButtonText">Set Alarms</string>
    <string name="stopAlarmButtonText">Stop Alarms</string>
    <string name="Settings">Settings</string>
    <string name="Language">Language</string>
    <string name="CallCount">Number of calls</string>
    <string name="FajrMethod">Fajr prayer calculation method</string>
    <string name="StopBatterOpt">Stop Battery Optimization</string>
    <string name="LanguagePref">Select display language.</string>
    <string name="CallCountPref">Select the number of waking calls.</string>
    <string name="FajrMethodPref">Select fajr prayer time calculation method.</string>
    <string name="StopBatterOptPref">Allow Fajr alarm to work in background to function properly.</string>
    <string name="StopBatterOptPrefDialogMsg"> requires to be enabled in protected Apps and battery optimization applications
        to function properly. </string>
    <string name="HomeButton">Home</string>
    <string name="ContactsButton">Contacts</string>
    <string name="LogsButton">Logs</string>
    <string name="DeleteContactAction"> has been removed from contacts</string>
    <string name="AddContactAction"> has been added to contacts</string>
    <string name="SetAlarmAction"> Fajr waking calls will start at </string>
    <string name="MaxContactsMessage"> You cannot add more than 10 contacts </string>
    <string name="ExistingNumberMessage"> Number already exists </string>
    <string name="UndoAction"> Undo </string>
    <string name="NumbersSelectionDialogTitle">Select number</string>
    <string name="ForeverDeniedPermsMessage">You have forcefully denied some of the required permissions
    for this action. Please open settings, go to permissions and allow them.</string>
    <string name="ForeverDeniedPermsTitle">Permissions Required</string>
    <string name="CancelButton">Cancel</string>
    <string name="AlarmTimingMessage">Calls should be scheduled before or after Fajr prayer time by 30 minutes.</string>
    <string name="contactNameTvText">Contact Name</string>
    <string name="contactNumberTvText">Number</string>
    <string name="callTimeTvText">Call Time</string>
    <string name="NoLogs">There are no active logs yet.</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="ringing_duration">Ringing Duration</string>
    <string name="status">Status</string>
    <string name="contactname">ContactName</string>
    <string name="schedulingMessage"> Next call will be at </string>
    <string name="cancelMessage"> Call is cancelled by  </string>
    <string name="noAnswerMessage"> No answer from  </string>
    <string name="protectedApps">protected Apps</string>
    <string name="gpsDialogTitle">GPS settings</string>
    <string name="gpsDialogMessage">Please turn on GPS and internet to get fajr prayer time.</string>
    <string name="nocontactsmessage">Please add contacts first.</string>
    <string name="cancelAlarmMmessage">Scheduled calls have been cancelled. </string>
    <string name="NotificationContent">Scheduled call of&#160;</string>


    <string name="ShiaIthnaAnsar">Shia Ithna-Ansar.</string>
    <string name="Karachi">University of Islamic Sciences, Karachi</string>
    <string name="America">Islamic Society of North America</string>
    <string name="League">Muslim World League</string>
    <string name="Makkah">Umm Al-Qura University, Makkah</string>
    <string name="Egypt">Egyptian General Authority of Survey</string>
    <string name="Tehran">Institute of Geophysics, University of Tehran</string>
    <string name="Gulf">Gulf Region</string>
    <string name="Kuwait">Kuwait</string>
    <string name="Qatar">Qatar</string>
    <string name="Singapore">Majlis Ugama Islam Singapura, Singapore</string>
    <string name="France">Union Organization islamic de France</string>
    <string name="Turkey">Directorate of Religious Affairs, Turkey</string>
    <string name="Russia">Spiritual Administration of Muslims of Russia</string>

    <string name="One">One</string>
    <string name="Two">Two</string>
    <string name="Three">Three</string>
    <string name="Four">Four</string>


    <string name="English">English</string>
    <string name="Arabic">العربية</string>

    <string name="HelpText">
        &#8227; Fajr Caller performs automatic calls for contacts added to contacts tab from your phonebook.\n\n&#8227; Add contacts then select the time at which you need to start the scheduled calls and then press Set Alarms button.\n\n&#8227; Calls are scheduled according to order of contacts addition in contact tab.\n\n&#8227; First contact scheduled call will be at the chosen alarm time, and each selected contact will have its scheduled call a minute after.\n\n&#8227; If call duration is more than 40 seconds another scheduled call will be performed until number of maximum call tries are reached.\n\n&#8227; Personal alarm will ring on your phone to wake you up one minute prior to the first scheduled call.\n\n&#8227; Number of call tries can be changed from settings.\n\n&#8227; You can cancel scheduled calls by pressing Stop Alarms button.\n\n&#8227; You can add up to 10 contacts maximum.\n\n&#8227; You can delete contact by swiping to left.\n\n&#8227; Order of contact can be readjusted by dragging the desired contact up or down in contact list.\n
    </string>
    <string name="Help">Help</string>
    <string name="stopPersonalAlarm">Stop</string>
    <string name="PersonalAlarm">Alarm</string>
    <string name="PersonalAlarmText">Alarm is automatically adjusted one minute prior to the first scheduled call to wake you up for fajr.</string>
    <string name="WakeUp">Fajr</string>


</resources>
