<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_Home"
        android:enabled="true"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/HomeButton"
        android:visible="true"
        app:showAsAction="always|withText" />
    <item
        android:id="@+id/action_contacts"
        android:enabled="true"
        android:icon="@drawable/ic_contacts_black_24dp"
        android:title="@string/ContactsButton"
        android:visible="true"
        app:showAsAction="always|withText" />
    <item
        android:id="@+id/action_logs"
        android:enabled="true"
        android:icon="@drawable/ic_phone_black_24dp"
        android:title="@string/LogsButton"
        android:visible="true"
        app:showAsAction="always|withText" />
</menu>